@@ -3,3 +3,7 @@
 ## New Features
 
 - Implement multiple media player backends -- kaneryu on 2025-09-21
+
+## Bugfixes
+
+- Update _set_info validation to include EP type -- kaneryu on 2025-09-21
