@@ -100,9 +100,9 @@ class Album(QObject):
         
     def _set_info(self, rawAlbumDetails: dict) -> None:
         self.rawAlbumDetails = rawAlbumDetails
-        
-        assert rawAlbumDetails["type"].lower() == "album" or rawAlbumDetails["type"].lower() == "single", "The provided ID does not correspond to an album or single."
-        
+
+        assert rawAlbumDetails["type"].lower() == "album" or rawAlbumDetails["type"].lower() == "single" or rawAlbumDetails["type"].lower() == "ep", "The provided ID does not correspond to an album or single or EP."
+
         self.title: str = rawAlbumDetails["title"]
         self.description: Union[str, None] = rawAlbumDetails["description"]
         
